Programas PsoC/RepasoC/RepasoC.cydsn/BUILD.log
--------------- Build Started: 08/20/2024 17:12:48 Project: RepasoC, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\elias\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\elias\OneDrive\Documents\Documentos\PSoC Creator\RepasoC\RepasoC.cydsn\RepasoC.cyprj" -d CY8C5868AXI-LP035 -s "C:\Users\elias\OneDrive\Documents\Documentos\PSoC Creator\RepasoC\RepasoC.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'getString':
main.c:27:5: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'for'
     for ( i = 0; ( i  < MAX_BUFF ) && (( ch = PC_getchar()) != EOF) && ( ch !='\n' ); ++i )
     ^
main.c:27:42: error: 'ch' undeclared (first use in this function)
     for ( i = 0; ( i  < MAX_BUFF ) && (( ch = PC_getchar()) != EOF) && ( ch !='\n' ); ++i )
                                          ^
main.c:27:42: note: each undeclared identifier is reported only once for each function it appears in
main.c:27:47: warning: implicit declaration of function 'PC_getchar' [-Wimplicit-function-declaration]
     for ( i = 0; ( i  < MAX_BUFF ) && (( ch = PC_getchar()) != EOF) && ( ch !='\n' ); ++i )
                                               ^
main.c: In function 'getNum':
main.c:35:12: warning: implicit declaration of function 'atoi' [-Wimplicit-function-declaration]
     return atoi(bufRX);
            ^
main.c: In function 'main':
main.c:49:23: warning: implicit declaration of function 'malloc' [-Wimplicit-function-declaration]
         coef = (void*)malloc((grado+1)*sizeof(int16_t);
                       ^
main.c:49:23: warning: incompatible implicit declaration of built-in function 'malloc'
main.c:49:23: note: include '<stdlib.h>' or provide a declaration of 'malloc'
main.c:49:55: error: expected ')' before ';' token
         coef = (void*)malloc((grado+1)*sizeof(int16_t);
                                                       ^
main.c:73:5: error: expected ';' before '}' token
     }
     ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 08/20/2024 17:13:12 ---------------
